--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,18 @@
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
     integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
     crossorigin=""></script>
+    <script src="http://bbecquet.github.io/Leaflet.RotatedMarker/leaflet.rotatedMarker.js"></script>
     <style>
         body {
             margin: 0;
         }
         #mapid { height: 100vh; }
+        
+        /* .arrow-360
+        {
+            border: 2px solid red;
+        } */
+        /* .arrow-360.img { transform: rotate(-90deg); } */
     </style>
 </head>
 <body>
@@ -53,7 +60,33 @@
                 console.log(routes[routeId]);
                 for (let bus of routes[routeId])
                 {
-                    markers.push(L.marker([bus.lat, bus.lng]).addTo(mymap));
+                    // markers.push(L.marker([bus.lat, bus.lng]).addTo(mymap));
+                    const markerRotateAngle = (parseFloat(bus.heading) - 135);
+                    let textRotateAngle = (parseFloat(bus.heading) - 90);
+                    if (textRotateAngle > 90) textRotateAngle -= 180;
+
+                    var myIcon = L.divIcon({
+                        iconUrl: './arrow.png',
+                        iconSize: [53, 55],
+                        iconAnchor: [25, 25],
+                        popupAnchor: [-3, -76],
+                        className: 'arrow-' + bus.heading,
+                        html: `
+                            <div>
+                                <img src="/arrow.png" width=53 height=55 style="transform: rotate(${markerRotateAngle}deg)" />
+                                <div style="color:red; font-weight: bold; transform: rotate(${textRotateAngle}deg)">${routeId}</div>
+                                <!--<div>${textRotateAngle}&deg;</div>-->
+                            </div>
+                        `
+                        // shadowUrl: 'my-icon-shadow.png',
+                        // shadowSize: [68, 95],
+                        // shadowAnchor: [22, 94]
+                    });
+                    //L.marker([50.505, 30.57], {icon: myIcon}).addTo(map);
+                    markers.push(L.marker([bus.lat, bus.lng], {
+                        icon: myIcon,
+                        // rotationAngle: bus.heading - 45 - 90
+                    }).addTo(mymap));
                 }
             }
         }
